--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
     <section id="contact">
         <h2>Contact Us</h2>
         <p>
-            Have a project in mind? Let’s bring it to life!  
+            هل لديك مشروع في الاعتبار؟ دعونا نعيده إلى الحياة! 
             Contact Us at: <a href="https://wsend.co/201092281230">01092281230</a>
+            <a href="https://www.facebook.com/profile.php?id=100054401144701&locale=ar_AR">facebook</a>
         </p>
     </section>
 
