--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </section>
 
     <section id="contact">
-        <h2>Contact Us</h2>
+        <h2><b>تواصل معنا</b></h2>
         <p>
             هل لديك مشروع في الاعتبار؟ دعونا نعيده إلى الحياة! 
            تواصل معنا
