--- a/هوية بصرية.html
+++ b/هوية بصرية.html
@@ -219,9 +219,11 @@
          <div style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap; padding: 20px;">
 
              <img src="نرتقى-2.jpg" style="display: block; background-color: rgb(255, 255, 255); color: #ffffff; text-decoration: none; border-radius: 10px;  text-align: center; font-size: 1.5em; font-weight: bold; cursor: pointer; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+             <img src="COLORS.gif" style="display: block; background-color: rgb(255, 255, 255); color: #ffffff; text-decoration: none; border-radius: 10px;  text-align: center; font-size: 1.5em; font-weight: bold; cursor: pointer; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+             <img src="Untitled-1.gif" style="display: block; background-color: rgb(255, 255, 255); color: #ffffff; text-decoration: none; border-radius: 10px;  text-align: center; font-size: 1.5em; font-weight: bold; cursor: pointer; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
              <img src="جدول-جلسات-مركز-لنرتقى--طباعة.jpg" style="display: block; background-color: rgb(255, 255, 255); color: #ffffff; text-decoration: none; border-radius: 10px;  text-align: center; font-size: 1.5em; font-weight: bold; cursor: pointer; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
              <img src="بوستر-مركز-لنرتقى.png" style="display: block; background-color: rgb(255, 255, 255); color: #ffffff; text-decoration: none; border-radius: 10px;  text-align: center; font-size: 1.5em; font-weight: bold; cursor: pointer; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
-                                      
+                                     
          </div>
      </section>
  
