--- a/هوية بصرية.html
+++ b/هوية بصرية.html
@@ -127,6 +127,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>A Design</title>
      <link rel="icon" href="ICON.png" type="image/x-icon">
+      <meta name="viewport" content="width=device-width; initial-scale=0.43; maximum-scale=1.5;">
 
      
      <style>
