--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>A Design</title>
      <link rel="icon" href="ICON.png" type="image/x-icon">
-      <meta name="viewport" content="width=device-width; initial-scale=0.43; maximum-scale=1.5;">
+       <meta name="viewport" content="width=device-width; initial-scale=0.43; maximum-scale=1.5;">
+   <link rel="apple-touch-icon" href="images/template/picture.png"/>
     
      
      <style>
