--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
      <link rel="icon" href="ICON.png" type="image/x-icon">
        <meta name="viewport" content="width=device-width; initial-scale=0.43; maximum-scale=1.5;">
    <link rel="apple-touch-icon" href="images/template/picture.png"/>
+      <meta name="viewport" content="width=device-width; initial-scale=0.43; maximum-scale=1.5;">
+   <link rel="apple-touch-icon" href="images/template/picture.png"/>
     
      
      <style>
