--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>A Design</title>
      <link rel="icon" href="ICON.png" type="image/x-icon">
-<meta name="viewport" content="width=1000px, initial-scale=1.0">
+     <meta name="viewport" content="width=device-width; initial-scale=0.43; maximum-scale=1.5;">
     
      
      <style>
@@ -227,7 +227,7 @@
                  🎨 تصميم هوية بصرية
                  <p style="color: #fff; font-size: 0.6em;">(...لوجو - ورقيات - الخ)</p>
              </a>
-             <a href="#" style="display: block; background-color: #004386a2; color: #ffffff; text-decoration: none; border-radius: 10px; padding: 20px; width: 250px; text-align: center; font-size: 1.5em; font-weight: bold; cursor: pointer; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+             <a href="سوشيال.html" style="display: block; background-color: #004386a2; color: #ffffff; text-decoration: none; border-radius: 10px; padding: 20px; width: 250px; text-align: center; font-size: 1.5em; font-weight: bold; cursor: pointer; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
                  📱 سوشيال ميديا
                  <p style="color: #fff; font-size: 0.6em;">(...تصميم بوستات - إدارة الحملات)</p>
              </a>
