--- a/about.html
+++ b/about.html
@@ -207,9 +207,9 @@
      </header>
  
      <nav>
-         <a href="#about">About</a>
-         <a href="#services">Services</a>
-         <a href="#contact">Contact</a>
+         <a href="about.html">About</a>
+         <a href="services.html">Services</a>
+        
      </nav>
  
   
