--- a/هوية بصرية.html
+++ b/هوية بصرية.html
@@ -127,7 +127,6 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>A Design</title>
      <link rel="icon" href="ICON.png" type="image/x-icon">
-      <meta name="viewport" content="width=1000px, initial-scale=1.0">
 
      
      <style>
@@ -208,9 +207,9 @@
      </header>
  
      <nav>
-         <a href="#about">About</a>
-         <a href="#services">Services</a>
-         <a href="#contact">Contact</a>
+         <a href="about.html">About</a>
+         <a href="services.html">Services</a>
+        
      </nav>
  
   
