--- a/index.html
+++ b/index.html
@@ -202,6 +202,13 @@
      </style>
  </head>
  <body>
+    <h2>المشاريع:</h2>
+    <div class="projects">
+        <?php
+        // ربط ملف عرض المشاريع
+        include 'show_projects.php';
+        ?>
+    </div>   
      <header>
          <h1>Welcome</h1>
          <p>وجهتك النهائية لحلول التصميم الإبداعي</p>
@@ -241,10 +248,16 @@
              تواصل: <a href="https://wsend.co/201092281230">01092281230</a>
              <a href="https://www.facebook.com/profile.php?id=100054401144701&locale=ar_AR">facebook</a>
          </p>
+         
      </section>
- 
+     
+
      <footer>
          <p>&copy; A Design. All Rights Reserved.</p>
      </footer>
  </body>
+ 
+ 
+
+ 
  </html>
