--- a/index.html
+++ b/index.html
@@ -202,12 +202,12 @@
      </style>
  </head>
  <body>
-    <h2>المشاريع:</h2>
+<!--     <h2>المشاريع:</h2>
     <div class="projects">
         <?php
         // ربط ملف عرض المشاريع
         include 'show_projects.php';
-        ?>
+        ?> -->
     </div>   
      <header>
          <h1>Welcome</h1>
