--- a/index.html
+++ b/index.html
@@ -238,6 +238,10 @@
                  📱 سوشيال ميديا
                  <p style="color: #fff; font-size: 0.6em;">(...تصميم بوستات - إدارة الحملات)</p>
              </a>
+              <a href="sena.html" style="display: block; background-color: #004386a2; color: #ffffff; text-decoration: none; border-radius: 10px; padding: 20px; width: 250px; text-align: center; font-size: 1.5em; font-weight: bold; cursor: pointer; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+                📱 بوسترات مدرسين
+                <p style="color: #fff; font-size: 0.6em;">(...تصميم بوسترات المدرسين - )</p>
+            </a>
          </div>
      </section>
  
