--- a/index.html
+++ b/index.html
@@ -209,8 +209,7 @@
         include 'show_projects.php';
         ?> -->
     </div>   
-     <header>
-        <h1><a href="https://ahmedalkawas95.github.io/A_design/">Welcome</a></h1>
+     <header><div> <h1><a href="https://ahmedalkawas95.github.io/A_design/">Welcome</a></h1></div>
          <p>وجهتك النهائية لحلول التصميم الإبداعي</p>
      </header>
  
